--- a/index.html
+++ b/index.html
@@ -26,12 +26,25 @@
                  Längst ner hittar du en Jullista, en Jullista till dig från mig. 
                  <br>
                  <br>
+<br>
                 Man kan kalla detta som ett litet vykort, ett digitalt, på en webbsida. Med tanke på att jag vet att du gillar vykort.
-                
-            </div>
+                Bilden Bakom är en bild taget i Luleå, mitt i centrum.
+                <br>
 
+<br>
+
+<br>
+                Tycker om dig, vackra Marie 
+                <br>
+                Med Vänliga Hälsningar Adriana 
+                <br> 
+                Puss och Kram
+                <br>
+      <br>
+        <br>
+</div>
      <div class="spotify">
-            <iframe src="https://open.spotify.com/embed/user/adri4na/playlist/4RtzTevGbbRQ1C0vUs5DPJ" width="350vw" height="70vw" frameborder="0" allowtransparency="true" allow="encrypted-media"style=" border-radius:46px solid lightgrey; "></iframe> 
+            <iframe src="https://open.spotify.com/embed/user/adri4na/playlist/4RtzTevGbbRQ1C0vUs5DPJ" width="331vw" height="70vw" frameborder="0" allowtransparency="true" allow="encrypted-media"style=" border-radius:46px solid lightgrey; "></iframe> 
     </div>
         
             <canvas id="canvas">
