--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br>
 
 <br>
-                Tycker om dig, vackra Marie 
+                Tycker om dig!
                 <br>
                 Med Vänliga Hälsningar Adriana 
                 <br> 
